--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
+    "sweetalert2": "^11.7.11",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
