--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
     "sweetalert2": "^11.7.11",
-    "swiper": "^9.3.2"
+    "swiper": "^9.3.2",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
