--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
+    "react-rating": "^2.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
     "sweetalert2": "^11.7.11",
