--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^9.22.1",
     "jsonwebtoken": "^9.0.0",
     "lottie-react": "^2.4.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
