--- a/package.json
+++ b/package.json
@@ -14,20 +14,25 @@
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.54.0",
     "@tanstack/react-query": "^4.29.12",
+    "animate.css": "^4.1.1",
     "axios": "^1.4.0",
-    "firebase": "^9.22.1",
+    "firebase": "^9.23.0",
+    "google-map-react": "^2.2.1",
     "jsonwebtoken": "^9.0.0",
     "lottie-react": "^2.4.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.3",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-rating": "^2.0.5",
     "react-responsive-carousel": "^3.2.23",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.11.2",
+    "react-scroll-trigger": "^0.6.14",
     "sweetalert2": "^11.7.11",
     "swiper": "^9.3.2",
     "uuidv4": "^6.2.13"
